# iot-reference-arm-corstone3xx

applications/memsafe/: CMakeLists.txt  Notes.md  main.c  main.c.lst
applications/memsafe/configs/: CMakeLists.txt
applications/memsafe/configs/freertos_config/: FreeRTOSConfig.h
tools/scripts/: build.sh  run.sh
